--- a/package.json
+++ b/package.json
@@ -40,12 +40,13 @@
   },
   "dependencies": {
     "@heroicons/react": "2.1.5",
+    "lucide-react": "^0.487.0",
     "react": "18.3.1",
     "react-dom": "18.3.1"
   },
   "devDependencies": {
-    "@eslint/js": "9.13.0",
     "@commitlint/cli": "19.5.0",
+    "@eslint/js": "9.13.0",
     "@tailwindcss/forms": "0.5.9",
     "@types/react": "18.3.12",
     "@types/react-dom": "18.3.1",
