--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "@heroicons/react": "2.1.5",
     "lucide-react": "^0.487.0",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "react-transition-group": "^4.4.5"
   },
   "devDependencies": {
     "@commitlint/cli": "19.5.0",
